--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer-organa {
     position: relative;
-    background-color: #6278F7;
+    background-color: #ff4654;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
