--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,5 +1,5 @@
 .banner {
-    background-color: #6278F7;
+    background-image: linear-gradient(to right, #ff4654, #101823, #101823);
     text-align: center;
 }
 
